--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
 	"files.associations": {
-		"stdio.h": "c"
-	}
+		"stdio.h": "c",
+		"string.h": "c"
+	},
+	"C_Cpp.errorSquiggles": "Enabled",
+	"C_Cpp.intelliSenseEngineFallback": "Enabled"
 }
